All resource are done!

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="w-11/12 lg:w-10/12 mx-auto ">
 
             <div
-                class="  grid grid-cols-1 lg:grid-cols-2 gap-5 sm:flex md:flex md:flex-nowrap  sm:flex-wrap items-center justify-between mx-auto">
+                class="  grid grid-cols-1 lg:grid-cols-2 gap-5 sm:flex sm:flex-wrap items-center justify-between mx-auto">
                 <a href="" class="flex items-center">
                     <img src="/assets/images/logo2.png" class=" h-6 m-auto lg:m-3 sm:h-9" alt="Legal Logo">
                 </a>
@@ -599,6 +599,70 @@
             </section>
         </article>
     </main>
+
+    <!-- Footer Part -->
+
+    <footer class="w-full bg-dark_1 text-white mt-32 text-center lg:text-left">
+        <section
+            class="footer_box_container w-11/12 lg:w-10/12 mx-auto py-28 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-16">
+            <div class="footer_box">
+                <div class="">
+                    <img class="m-auto lg:m-0" src="./assets/images/logo.png" alt="">
+                </div>
+                <div class="footer_desc mt-8">
+                    <p class="text-xs text-dark_3">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form,
+                        by injected humour.
+                    </p>
+                </div>
+            </div>
+            <div class="footer_box">
+                <h3 class="text-2xl font-extrabold">Usefull Link</h3>
+                <div class="footer_desc mt-8 text-xs text-dark_3">
+                    <ul>
+                        <li><a class="block py-2 hover:text-main_deep" href="">Home</a></li>
+                        <li><a class="block py-2 hover:text-main_deep" href="">About Us</a></li>
+                        <li><a class="block py-2 hover:text-main_deep" href="">Cases</a></li>
+                        <li><a class="block py-2 hover:text-main_deep" href="">Blog</a></li>
+                        <li><a class="block py-2 hover:text-main_deep" href="">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer_box">
+                <h3 class="text-2xl font-extrabold">Contact Now</h3>
+                <div class="footer_desc text-xs text-dark_3 mt-8">
+                    <p>555 4th 5t NW, Washington
+                        DC 20530, United States</p>
+                    <p class="my-4">
+                        <span class="block">+88 01750 000 000</span>
+                        <span class="block">+88 01646 177 800</span>
+                    </p>
+                    <p>
+                        <span class="block">info@gmail.com</span>
+                        <span class="block">info@gmail.com</span>
+                    </p>
+                </div>
+            </div>
+            <div class="footer_box">
+                <h3 text-2xl font-extrabold>Subscribe</h3>
+                <div class="footer_desc text-xs text-dark_3 mt-8">
+                    <p>
+                        Subscribe for our latest & Articles. We Won’t Give You Spam Mails
+                    </p>
+                    <div class="form_box flex justify-center items-center bg-white rounded-md mt-6">
+                        <input
+                            class="border-none outline-none focus:outline-none focus:border-none rounded-md bg-white w-3/4"
+                            type="email" placeholder="Email Address....">
+                        <button type="submit"
+                            class="focus:outline-none text-white bg-[forestgreen] hover:bg-[#10dd10] font-medium rounded-md text-lg px-5 py-2.5 w-1/4 m-0">
+                            <i class="fab fa-telegram-plane"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 
 
