--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/profile/favicon.png" type="image/x-icon">
     <title>Legal - Solution - Resources</title>
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -664,11 +664,6 @@
         </section>
     </footer>
 
-
-
-
-
-    <br><br><br><br><br>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/d30db6726a.js" crossorigin="anonymous"></script>
